--- a/src/assets/css/components.css
+++ b/src/assets/css/components.css
@@ -1,5 +1,5 @@
 @import "./components/card.css";
-/*@import "./components/skeleton.css";*/
+@import "./components/skeleton.css";
 @import "./components/avatar.css";
 @import "./components/spinner.css";
 @import "./components/popper.css";
@@ -16,7 +16,7 @@
 @import "./components/flatpickr.css";
 /*@import "./components/notification.css";*/
 /*@import "./components/steps.css";*/
-/*@import "./components/timeline.css";*/
+@import "./components/timeline.css";
 /*@import "./components/pagination.css";*/
 @import "./components/swiper.css";
 @import "./components/apexcharts.css";
